--- a/views/admin/auser/user_list.html
+++ b/views/admin/auser/user_list.html
@@ -33,7 +33,7 @@
                                         <td class="text-center"><input type="checkbox" name="delete" value="{{.ID}}"></td>
                                         <td>{{.ID}}</td>
                                         <td>{{.Username}}</td>
-                                        <td>{{if eq .GroupID 0}}游客组{{else}}{{.Group.Name}}{{end}}</td>
+                                        <td>{{if eq .GroupID 0}}游客{{else}}{{.Group.Name}}{{end}}</td>
                                         <td>{{.CreatedAt.Format "2006/01/02  15:04:05"}}</td>
                                         <td><a href="#" target="_blank">{{.CreateIp | strip}}</a></td>
                                         <td>
