--- a/views/app/article/editarticle.html
+++ b/views/app/article/editarticle.html
@@ -7,7 +7,7 @@
             <div class="col-lg-10 mx-auto">
                 <div class="card">
                     <div class="card-header">
-                        更新主题
+                        更新文章
                     </div>
                     <div class="card-body">
                         <form action="/api/article/{{.article.ID}}/update" method="post" id="articleform">
@@ -55,7 +55,7 @@
 
                                 </div>
                                 <div class="text-right">
-                                    <button type="button" class="btn btn-primary" id="articlesubmit" data-loading-text="正在提交..."> 更新主题
+                                    <button type="button" class="btn btn-primary" id="articlesubmit" data-loading-text="正在提交..."> 更新文章
                                     </button>
                                 </div>
                             </div>
