--- a/views/app/comment/advance_comment.html
+++ b/views/app/comment/advance_comment.html
@@ -21,7 +21,7 @@
                                 <div class="d-flex justify-content-between">
                                     <div>
                                         <button id="replysubmit" type="button" class="btn btn-sm btn-secondary"
-                                            id="submit" data-loading-text="正在提交..."> 回帖 </button>
+                                            id="submit" data-loading-text="正在提交..."> 回复 </button>
                                     </div>
                                 </div>
                             </div>
