--- a/views/app/layout/footer.html
+++ b/views/app/layout/footer.html
@@ -31,7 +31,7 @@
             // 当前时间
             var time = xn.time();
 
-            // 多长时间内的主题为最新主题
+            // 多长时间内的文章为最新文章
             var time_range = 86400 * 3;
 
             // 三天内的 tids
@@ -88,9 +88,9 @@
             }
             if (tid) save_view_tid(tid);
 
-            // 三天内的主题标记为已读
+            // 三天内的文章标记为已读
 
-            // 遍历主题列表，标记最近的，并且未读的为加粗
+            // 遍历文章列表，标记最近的，并且未读的为加粗
 
             $('.article').each(function () {
                 var jthis = $(this);
