--- a/views/app/mod/del_mod.html
+++ b/views/app/mod/del_mod.html
@@ -54,7 +54,7 @@ box-shadow: 0 0 5px red;
 <body>
 
 <div class="card">
-    <div class="card-header">删除主题</div>
+    <div class="card-header">删除文章</div>
     <div class="card-body ajax-body">
         <form action="/api/article/1/delete" method="post" id="mod_delete_form" enctype="multipart/form-data">
             <div class="form-group row">
