--- a/views/app/my/my_avatar.html
+++ b/views/app/my/my_avatar.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
             <a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-            <a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛帖子</a>
+            <a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛回复</a>
         </div>
         <div class="row">
             <!-- 左侧菜单 -->
@@ -17,7 +17,7 @@
                         <a href="/my.html" class="list-group-item list-group-item-action active"
                             data-active="menu-my">个人资料</a>
                         <a href="/my_article.html" class="list-group-item list-group-item-action"
-                            data-active="menu-my-article">论坛帖子</a>
+                            data-active="menu-my-article">论坛回复</a>
                     </div>
                 </div>
             </div>
