--- a/views/app/my/my_favorite.html
+++ b/views/app/my/my_favorite.html
@@ -4,7 +4,7 @@
         <div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
             <a role="button" class="btn btn-secondary" data-active="menu-my" href="/my.html">个人资料</a>
             <a role="button" class="btn btn-secondary active" data-active="menu-my-article"
-                href="/my_article.html">论坛帖子</a>
+                href="/my_article.html">论坛回复</a>
         </div>
         <div class="row">
             <!-- 左侧菜单 -->
@@ -17,7 +17,7 @@
                     <div class="list-group list-group-flush text-center">
                         <a href="/my.html" class="list-group-item list-group-item-action" data-active="menu-my">个人资料</a>
                         <a href="/my_article.html" class="list-group-item list-group-item-action active"
-                            data-active="menu-my-article">论坛帖子</a>
+                            data-active="menu-my-article">论坛回复</a>
                     </div>
                 </div>
             </div>
@@ -27,13 +27,13 @@
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
-                                <a class="nav-link" href="/my_article.html" data-active="my-article">主题</a>
+                                <a class="nav-link" href="/my_article.html" data-active="my-article">文章</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="/my_favorite.html" data-active="my-favorite">收藏 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/my_reply.html" data-active="my-reply">帖子</a>
+                                <a class="nav-link" href="/my_reply.html" data-active="my-reply">回复</a>
                             </li>
                         </ul>
                     </div>
