--- a/views/admin/index/aindex.html
+++ b/views/admin/index/aindex.html
@@ -10,8 +10,8 @@
                     <div class="card-body">
                         <h5 class="card-title">站点统计信息</h5>
                         <div class="row">
-                            <div class="col-md-4"><span class="text-muted">主题数：</span>{{.counts.articles}}</div>
-                            <div class="col-md-4"><span class="text-muted">帖子数：</span>{{.counts.replys}}</div>
+                            <div class="col-md-4"><span class="text-muted">文章数：</span>{{.counts.articles}}</div>
+                            <div class="col-md-4"><span class="text-muted">回复数：</span>{{.counts.replys}}</div>
                             <div class="col-md-4"><span class="text-muted">用户数：</span>{{.counts.users}}</div>
                             <div class="col-md-4"><span class="text-muted">附件总数：</span>{{.counts.attachs}}</div>
                         </div>
