--- a/views/admin/saying/asayinglist.html
+++ b/views/admin/saying/asayinglist.html
@@ -10,7 +10,7 @@
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
                                 <a class="nav-link " href="./">
-                                    主题列表
+                                    文章列表
                                 </a>
                             </li>
                         </ul>
