--- a/views/app/article/article2.html
+++ b/views/app/article/article2.html
@@ -6,7 +6,7 @@
             <div class="col-lg-9 main">
                 <ol class="breadcrumb d-none d-md-flex">
                     <li class="breadcrumb-item"><a href="/" aria-label="首页"><i class="icon-home"></i></a></li>
-                    <li class="breadcrumb-item active"><a href="?article-2.htm" title="首页返回主题第一页">{{.article.Title}}</a></li>
+                    <li class="breadcrumb-item active"><a href="?article-2.htm" title="首页返回文章第一页">{{.article.Title}}</a></li>
                 </ol>
                 <div class="card card-article">
                     <div class="card-body">
@@ -64,7 +64,7 @@
                                         <div>
                                             <span style="padding-bottom:0;margin-bottom:0;color:; ">
                                                 <i class="iconfont icon-v1" style="font-size: !important;">
-                                                    管理员组 </i>
+                                                    管理员 </i>
                                             </span>
                                             <span class="username">
                                                 <a href="?user-2.htm" class="text-muted font-weight-bold">zhang</a>
@@ -112,7 +112,7 @@
                                             <div class="text-muted mt-2 small">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <button id="tijiaoshuju" type="submit" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交..."> 回帖 </button>
+                                                        <button id="tijiaoshuju" type="submit" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交..."> 回复 </button>
                                                     </div>
                                                     <div>
                                                         <a class="icon-mail-forward text-muted" href="?reply-create-2.htm" id="advanced_reply"> 高级回复</a>
@@ -137,7 +137,7 @@
                 <a role="button" class="btn btn-secondary btn-block xn-back col-lg-6 mx-auto mb-3" href="javascript:history.back();">返回</a>
             </div>
             <div class="col-lg-3 d-none d-lg-block aside">
-                <a role="button" class="btn btn-primary btn-block mb-3" href="?article-create-2.htm">发新帖</a>
+                <a role="button" class="btn btn-primary btn-block mb-3" href="?article-create-2.htm">发文章</a>
                 <div class="card card-user-info">
                     <div class="m-3 text-center">
                         <a href="?user-1.htm" tabindex="-1">
@@ -150,11 +150,11 @@
                             <tbody>
                                 <tr align="center">
                                     <td>
-                                        <span class="text-muted">主题数</span><br>
+                                        <span class="text-muted">文章数</span><br>
                                         <b>{{.article.User.ArticlesCnt}}</b>
                                     </td>
                                     <td>
-                                        <span class="text-muted">帖子数</span><br>
+                                        <span class="text-muted">回复数</span><br>
                                         <b>{{.article.User.ReplysCnt}}</b>
                                     </td>
                                     <td>
