--- a/views/app/article/newarticle.html
+++ b/views/app/article/newarticle.html
@@ -14,7 +14,7 @@
             <div class="col-lg-10 mx-auto">
                 <div class="card">
                     <div class="card-header">
-                        发表主题
+                        发表文章
                     </div>
                     <div class="card-body">
                         <form action="/api/article" method="post" id="articleform">
