--- a/views/app/index/sayingindex.html
+++ b/views/app/index/sayingindex.html
@@ -3,12 +3,12 @@
 <main id="body">
     <div class="container">
         <div class="row">
-            <div class="col-lg-9 main">              
+            <div class="col-lg-9 main">
                 <div class="card card-articlelist">
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs">
                             <li class="nav-item">
-                                <a class="nav-link active" href="/">文章</a>
+                                <a class="nav-link active" href="/">说说</a>
                             </li>
                         </ul>
                     </div>
@@ -16,8 +16,8 @@
                         <ul class="list-unstyled articlelist mb-0">
                             {{$isadmin := .sessions.Isadmin}}
                             {{$sesid := .sessions.Userid}}
-                            {{ range .articleList }}
-                            <li class="media article tap  " data-href="/article/{{.ID}}/detail.html" data-tid="22">
+                            {{ range .commentList }}
+                            <li class="media article tap  " data-href="/saying/{{.SayingID}}/detail.html" data-tid="22">
                                 {{if eq $isadmin "1"}}
                                 <input type="checkbox" name="modtid" class="mt-3 mr-2" value="{{.ID}}">
                                 {{end}}
@@ -25,31 +25,32 @@
                                     tabindex="-1" class="ml-1 mt-1 mr-3">
                                     <img class="avatar-3" src="{{.User.Avatar}}">
                                 </a>
+                                <a href="/saying/{{.SayingID}}/detail.html">
                                 <div class="media-body">
-                                    <div class="title break-all font-weight-bold">
-                                        <a href="/article/{{.ID}}/detail.html">{{.Title}}</a>
-                                        {{if .FilesNum}}
-                                        <i class="icon small filetype other"></i>
-                                        {{end}}
-                                    </div>
                                     <div class="d-flex justify-content-between small mt-1">
                                         <div>
                                             <span class="username text-grey mr-1 " uid="1">{{.User.Username}}</span>
                                             <span class="date text-grey">{{.CreatedAt.Unix | strtime}}</span>
                                         </div>
+                                        {{$sayingid := .SayingID}}
+                                        {{ range .Saying }}
+                                        {{if eq .ID $sayingid}}
                                         <div class="text-muted small">
                                             <span class="ml-2"><i class="icon-eye"></i> {{.ViewsCnt}}</span>
-                                            <span class="ml-2"><i class="icon-comment-o"></i> {{.ReplysCnt}}</span>
+                                            <span class="ml-2"><i class="icon-comment-o"></i> {{.CommentsCnt}}</span>
                                         </div>
+                                        {{end}}
+                                        {{end}}
                                     </div>
+                                    {{.MessageFmt | unescaped}}
                                 </div>
+                                </a>
                             </li>
                             {{end}}
                         </ul>
                     </div>
                 </div>
-
-                {{ template "mod/article_list_mod.inc" .}}
+                {{ template "mod/saying_list_mod.inc" .}}
                 <nav class="my-3">
                     <ul class="pagination justify-content-center flex-wrap">
                         {{.pages | unescaped}}
@@ -68,12 +69,12 @@
                             <tbody>
                                 <tr align="center">
                                     <td>
-                                        <span class="text-muted">文章数</span><br>
-                                        <b>{{.articles_num}}</b>
+                                        <span class="text-muted">说说数</span><br>
+                                        <b>{{.sayings_num}}</b>
                                     </td>
                                     <td>
-                                        <span class="text-muted">回复数</span><br>
-                                        <b>{{.replys_num}}</b>
+                                        <span class="text-muted">评论数</span><br>
+                                        <b>{{.comments_num}}</b>
                                     </td>
                                     <td>
                                         <span class="text-muted">用户数</span><br>
