--- a/views/app/layout/header.html
+++ b/views/app/layout/header.html
@@ -16,7 +16,7 @@
             <img src="/static/img/logo.png" class="logo-2">
         </a>
         {{if .islogin}}
-        <a class="navbar-brand hidden-lg" href="/newarticle.html" aria-label="发表主题"><i class="icon-edit icon"></i></a>
+        <a class="navbar-brand hidden-lg" href="/newarticle.html" aria-label="发表文章"><i class="icon-edit icon"></i></a>
         {{else}}
         <a class="navbar-brand hidden-lg" href="/login.html" aria-label="登录"> <i class="icon-user icon"></i></a>
         {{end}}
@@ -24,8 +24,21 @@
         <div class="collapse navbar-collapse" id="nav">
             <!-- 左侧：版块 -->
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item home" fid="0" data-active="fid-0"><a id="fid-0" class="nav-link nav-link"
-                        href="/"><i class="icon-home d-md-none"></i> 首页</a></li>
+                <li class="nav-item home" fid="0" data-active="fid-0">
+                    <a id="fid-0" class="nav-link nav-link" href="/">
+                        <i class="icon icon-home icon-fw"></i>  首页
+                    </a>
+                </li>
+                <li class="nav-item home" fid="0" data-active="fid-0">
+                    <a id="fid-0" class="nav-link nav-link" href="/articles">
+                        <i class="icon icon-book icon-fw"></i>  文章
+                    </a>
+                </li>
+                <li class="nav-item home" fid="0" data-active="fid-0">
+                    <a id="fid-0" class="nav-link nav-link" href="/sayings">
+                        <i class="icon icon-cloud icon-fw"></i>  说说
+                    </a>
+                </li>
             </ul>
             <!-- 右侧：用户 -->
             <ul class="navbar-nav">
