--- a/views/app/layout/newarticle_button.html
+++ b/views/app/layout/newarticle_button.html
@@ -1,5 +1,5 @@
 {{ define "layout/addnewarticle" }}
-<a id="addnewarticle" role="button" class="btn btn-primary btn-block mb-3" href="#">发新帖</a>
+<a id="addnewarticle" role="button" class="btn btn-primary btn-block mb-3" href="#">发文章</a>
 <a id="addnewsaying" role="button" class="btn btn-primary btn-block mb-3" href="#">发说说</a>
 <script>
     var jnewarticle = $("#addnewarticle")
