--- a/views/app/my/my_info.html
+++ b/views/app/my/my_info.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
             <a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-            <a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛帖子</a>
+            <a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛回复</a>
         </div>
         <div class="row">
             <!-- 左侧菜单 -->
@@ -18,7 +18,7 @@
                         <a href="/my.html" class="list-group-item list-group-item-action active"
                             data-active="menu-my">个人资料</a>
                         <a href="/my_article.html" class="list-group-item list-group-item-action"
-                            data-active="menu-my-article">论坛帖子</a>
+                            data-active="menu-my-article">论坛回复</a>
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                     <div class="card-body">
                         <div class="row line-height-4">
                             <div class="col-md-6">
-                                <span class="text-muted">主题数：</span>{{.userinfo.ArticlesCnt}}<br>
-                                <span class="text-muted">帖子数：</span>{{.userinfo.ReplysCnt}}<br>
+                                <span class="text-muted">文章数：</span>{{.userinfo.ArticlesCnt}}<br>
+                                <span class="text-muted">回复数：</span>{{.userinfo.ReplysCnt}}<br>
                                 <span class="text-muted">收藏数：</span><a href="?my-favorites.htm"
                                     target="_blank">{{.userinfo.ReplysCnt}}</a><br>
                             </div>
