--- a/views/app/reply/advance_reply.html
+++ b/views/app/reply/advance_reply.html
@@ -31,7 +31,7 @@
                                     </div>
                                     <div>
                                         <button id="replysubmit" type="button" class="btn btn-sm btn-secondary"
-                                            id="submit" data-loading-text="正在提交..."> 回帖 </button>
+                                            id="submit" data-loading-text="正在提交..."> 回复 </button>
                                     </div>
                                 </div>
                             </div>
