--- a/views/app/saying/saying.html
+++ b/views/app/saying/saying.html
@@ -141,7 +141,7 @@
                                             <div class="text-muted mt-2 small">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <button id="commentsubmit" type="button" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交..."> 回帖 </button>
+                                                        <button id="commentsubmit" type="button" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交..."> 回复 </button>
                                                     </div>
                                                     <div>
                                                         <a class="icon-mail-forward text-muted" href="#" id="advanced_reply"> 高级回复</a>
@@ -181,11 +181,11 @@
                             <tbody>
                                 <tr align="center">
                                     <td>
-                                        <span class="text-muted">主题数</span><br>
+                                        <span class="text-muted">说说数</span><br>
                                         <b>{{.saying.User.SayingsCnt}}</b>
                                     </td>
                                     <td>
-                                        <span class="text-muted">帖子数</span><br>
+                                        <span class="text-muted">评论数</span><br>
                                         <b>{{.saying.User.CommentsCnt}}</b>
                                     </td>
                                     <td>
@@ -195,22 +195,6 @@
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
-                </div>
-                {{/*用户的列表*/}}
-                <div class="card">
-                    <div class="card-body">
-                        <h6 class="card-title">作者最近主题：</h6>
-                        <ul class="small break-all">
-                            {{range .user_newest_sayings}}
-                            <li class="line-height-2">
-                                <a href="/saying/{{.ID}}/detail.html">
-                                    
-                                </a>
-                            </li>
-                            {{end}}
-
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -293,7 +277,7 @@ function addNewCommentElement() {
                 '<div class="d-flex justify-content-between small text-muted">' +
         '           <div> ' +
                         '<span style="padding-bottom:0;margin-bottom:0;color:; ">' +
-                            '<i class="iconfont icon-v1" style="font-size: !important;">管理员组 </i> ' +
+                            '<i class="iconfont icon-v1" style="font-size: !important;">管理员 </i> ' +
                         '</span>' +
                         '<span class="username">' +
                             '<a href="?user-2.htm" class="text-muted font-weight-bold">zhang</a>' +
