--- a/views/app/usercenter/u_info.html
+++ b/views/app/usercenter/u_info.html
@@ -4,7 +4,7 @@
         <!-- 手机导航 / Mobile navigation -->
         <div class="btn-group mb-3 d-lg-none" role="group" id="user_mobile_nav">
             <a role="button" class="btn btn-secondary active" data-active="menu-user" href="?user-1.htm">个人资料</a>
-            <a role="button" class="btn btn-secondary" data-active="menu-user-article" href="?user-article-1.htm">论坛帖子</a>
+            <a role="button" class="btn btn-secondary" data-active="menu-user-article" href="?user-article-1.htm">论坛回复</a>
         </div>
         <div class="row">
             <!-- PC 导航 / Mobile navigation -->
@@ -16,7 +16,7 @@
                     </div>
                     <div class="list-group list-group-flush text-center" id="user_nav">
                         <a href="/user/{{.userinfo.ID}}/info.html" class="list-group-item list-group-item-action active" data-active="menu-user">个人资料</a>
-                        <a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action" data-active="menu-user-article">论坛帖子</a>
+                        <a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action" data-active="menu-user-article">论坛回复</a>
                     </div>
                 </div>
             </div>
@@ -36,8 +36,8 @@
                                 <br><b>{{.userinfo.Username}} </b>
                             </div>
                             <div class="col-4 col-sm-5">
-                                <span class="text-muted">主题数：</span>{{.userinfo.ArticlesCnt}}<br>
-                                <span class="text-muted">帖子数：</span>{{.userinfo.ReplysCnt}}<br>
+                                <span class="text-muted">文章数：</span>{{.userinfo.ArticlesCnt}}<br>
+                                <span class="text-muted">回复数：</span>{{.userinfo.ReplysCnt}}<br>
                             </div>
                             <div class="col-auto">
                                 <span class="text-muted">用户组：</span>{{.userinfo.Group.Name}} <br>
