--- a/views/admin/article/aarticlelist.html
+++ b/views/admin/article/aarticlelist.html
@@ -1,81 +1,68 @@
 {{ template "layout/adminheader" .}}
-
-
 <main id="body">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 mx-auto">
-                <div class="card">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link " href="./">
-                                    文章列表
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <ul id="articlelist" class="list-unstyled articlelist mb-0">
-                            {{range .articles}}
-
-                            <li class="media article tap  " data-href="/article/{{.ID}}/detail.html" data-tid="2">
-                                <a href="/article/{{.ID}}/detail.html" tabindex="-1" class="ml-1 mt-1 mr-3">
-                                    <img class="avatar-3" src="{{.User.Avatar}}">
-                                </a>
-                                <div class="media-body">
-                                    <div class="title break-all">
-                                        <a href="/article/{{.ID}}/detail.html">{{.Title}}</a>
-                                    </div>
-                                    <div class="d-flex justify-content-between small mt-1">
-                                        <div>
-                                            <span class="username text-grey mr-1  hidden-sm" uid="2134">{{.User.Username}}</span>
-                                            <span class="date text-grey hidden-sm">{{.CreatedAt}}</span>
-                                        </div>
-                                        <div class="text-muted small">
-                                            <span class="ml-2"><i class="icon-eye"></i> {{.ViewsCnt}}</span>
-                                            <span class="ml-2"><i class="icon-comment-o"></i> {{.ReplysCnt}}</span>
-                                            <span class="ml-2"><a onclick="delet(this, {{.ID}})"  href="#" class="btn btn-danger  btn-sm">删除</a></span>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-
-                            {{end}}
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-lg-3 hidden-sm hidden-md">
-
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 mx-auto">
+				<div class="card">
+					<div class="card-header">
+						<ul class="nav nav-tabs card-header-tabs">
+							<li class="nav-item">
+								<a class="nav-link " href="./"> 文章列表 </a>
+							</li>
+						</ul>
+					</div>
+					<div class="card-body">
+						<ul id="articlelist" class="list-unstyled articlelist mb-0">
+							{{range .articles}}
+							<li class="media article tap  " data-href="/article/{{.ID}}/detail.html" data-tid="2">
+								<a href="/article/{{.ID}}/detail.html" tabindex="-1" class="ml-1 mt-1 mr-3">
+									<img class="avatar-3" src="{{.User.Avatar}}">
+								</a>
+								<div class="media-body">
+									<div class="title break-all">
+										<a href="/article/{{.ID}}/detail.html">{{.Title}}</a>
+									</div>
+									<div class="d-flex justify-content-between small mt-1">
+										<div>
+											<span class="username text-grey mr-1  hidden-sm" uid="2134">{{.User.Username}}</span>
+											<span class="date text-grey hidden-sm">{{.CreatedAt}}</span>
+										</div>
+										<div class="text-muted small">
+											<span class="ml-2"><i class="icon-eye"></i> {{.ViewsCnt}}</span>
+											<span class="ml-2"><i class="icon-comment-o"></i> {{.ReplysCnt}}</span>
+											<span class="ml-2"><a onclick="delet(this, {{.ID}})" href="#" class="btn btn-danger  btn-sm">删除</a></span>
+										</div>
+									</div>
+								</div>
+							</li>
+							{{end}}
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 hidden-sm hidden-md">
+			</div>
+		</div>
+	</div>
 </main>
-
-
 <script>
-    // 删除
-    function delet(elem, articleid) {
-        $.ajax({
-            url:"/api/article/" + articleid + "/delete?token=" + admintoken,
-            data:{
-                "tidarr":articleid,
-            },
-            method:"post",
-            success:function (res) {
-                if (res.code == 200) {
-                    $(elem).parent().parent().parent().parent().parent().remove()
-                } else {
-                    $.alert(res.message)
-                }
-            }
-        })
-    }
-
-    $('#nav li.nav-item-article').addClass('active');
+	// 删除
+	function delet(elem, articleid) {
+		$.ajax({
+			url: "/api/article/" + articleid + "/delete?token=" + admintoken,
+			data: {
+				"tidarr": articleid,
+			},
+			method: "post",
+			success: function(res) {
+				if (res.code == 200) {
+					$(elem).parent().parent().parent().parent().parent().remove()
+				} else {
+					$.alert(res.message)
+				}
+			}
+		})
+	}
+	$('#nav li.nav-item-article').addClass('active');
 </script>
-
 {{ template "layout/adminfooter" .}}
