--- a/views/app/mod/del_mod.html
+++ b/views/app/mod/del_mod.html
@@ -1,30 +1,29 @@
 <html lang="zh-cn">
-
-<head>
-    <meta charset="utf-8">
-    <meta name=".port" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Gin BBS 站点介绍">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta http-equiv="Cache-Control" content="no-transform">
-    <meta http-equiv="Cache-Control" content="no-siteapp">
-    <title>用户登录</title>
-    <link rel="shortcut icon" href="/static/img/favicon.ico">
-    <link rel="icon" sizes="32x32" href="/static/img/favicon.ico">
-    <link rel="Bookmark" href="/static/img/favicon.ico">
-    <link rel="stylesheet" href="/static/css/bootstrap.css?1.0">
-    <link rel="stylesheet" href="/static/css/bootstrap-bbs.css?1.0">
-    <script src="/static/js/jquery-3.1.0.js?1.0"></script>
-    <script src="/static/js/popper.js?1.0"></script>
-    <script src="/static/js/bootstrap.js?1.0"></script>
-    <script src="/static/js/xiuno.js?1.0"></script>
-    <script src="/static/js/bootstrap-plugin.js?1.0"></script>
-    <script src="/static/js/async.js?1.0"></script>
-    <script src="/static/js/form.js?1.0"></script>
-    <script src="/static/js//bbs.js?1.0"></script>
-    <script src="/static/lang/zh-cn/bbs.js?1.0"></script>
-    <style>
-        /*
+	<head>
+		<meta charset="utf-8">
+		<meta name=".port" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Gin BBS 站点介绍">
+		<meta name="renderer" content="webkit">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+		<meta http-equiv="Cache-Control" content="no-transform">
+		<meta http-equiv="Cache-Control" content="no-siteapp">
+		<title>用户登录</title>
+		<link rel="shortcut icon" href="/static/img/favicon.ico">
+		<link rel="icon" sizes="32x32" href="/static/img/favicon.ico">
+		<link rel="Bookmark" href="/static/img/favicon.ico">
+		<link rel="stylesheet" href="/static/css/bootstrap.css?1.0">
+		<link rel="stylesheet" href="/static/css/bootstrap-bbs.css?1.0">
+		<script src="/static/js/jquery-3.1.0.js?1.0"></script>
+		<script src="/static/js/popper.js?1.0"></script>
+		<script src="/static/js/bootstrap.js?1.0"></script>
+		<script src="/static/js/xiuno.js?1.0"></script>
+		<script src="/static/js/bootstrap-plugin.js?1.0"></script>
+		<script src="/static/js/async.js?1.0"></script>
+		<script src="/static/js/form.js?1.0"></script>
+		<script src="/static/js//bbs.js?1.0"></script>
+		<script src="/static/lang/zh-cn/bbs.js?1.0"></script>
+		<style>
+			/*
 box-shadow: 0 0 5px red;
 */
         @keyframes xndigest {
@@ -49,84 +48,76 @@ box-shadow: 0 0 5px red;
 
 
     </style>
-</head>
-
-<body>
-
-<div class="card">
-    <div class="card-header">删除文章</div>
-    <div class="card-body ajax-body">
-        <form action="/api/article/1/delete" method="post" id="mod_delete_form" enctype="multipart/form-data">
-            <div class="form-group row">
-                <label class="col-4 form-control-label text-right">一共删除：</label>
-                <div class="col-8">
-                <span class="total font-weight-bold text-danger">篇
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-4 form-control-label text-right"></label>
-                <div class="col-8">
-                    <button id="delsubmit" type="button" class="btn btn-primary mr-2" data-loading-text="正在提交...">确认</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-
-
-
-<script ajax-eval="true">
-
-    // 接受传参
-    var args = args || {jmodal: null, callback: null, arg: null};
-    var jmodal = args.jmodal;
-    var callback = args.callback;
-    var arg = args.arg;
-    var jarticlelist = $(arg);  // .articlelist
-    var tidarr = jarticlelist.find('input[name="modtid"]').checked();
-    console.log("获取的数组",tidarr)
-
-    var jform = $('#mod_delete_form');
-    var jsubmit = $('#delsubmit');
-
-    var jtotal = jform.find('span.total');
-    jtotal.text(tidarr.length);
-
-    jsubmit.on('click', function() {
-        jform.reset();
-        jsubmit.button('loading');
-        var fd = new FormData()
-        fd.append("tidarr", tidarr)
-        console.log(fd)
-        $.ajax({
-            url: jform.attr("action"),
-            data: fd,
-            type: "POST",
-            contentType: false,
-            processData:false,
-            success: function(res) {
-                //成功
-                console.log("返回值", res)
-                if (res.code == 200) {
-                    $.alert("删除成功")
-                    setTimeout(function () {
-                        location.reload()
-                    },200)
-                } else {
-                    $.alert(res.message)
-                    jsubmit.reset()
-                    return
-                }
-            },
-            error: function() {
-                //失败
-            }
-        })
-        return false;
-    });
-
-</script>
-
-</body>
+	</head>
+	<body>
+		<div class="card">
+			<div class="card-header">删除文章</div>
+			<div class="card-body ajax-body">
+				<form action="/api/article/1/delete" method="post" id="mod_delete_form" enctype="multipart/form-data">
+					<div class="form-group row">
+						<label class="col-4 form-control-label text-right">一共删除：</label>
+						<div class="col-8">
+							<span class="total font-weight-bold text-danger">篇 </div>
+					</div>
+					<div class="form-group row">
+						<label class="col-4 form-control-label text-right"></label>
+						<div class="col-8">
+							<button id="delsubmit" type="button" class="btn btn-primary mr-2" data-loading-text="正在提交...">确认</button>
+							<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<script ajax-eval="true">
+			// 接受传参
+			var args = args || {
+				jmodal: null,
+				callback: null,
+				arg: null
+			};
+			var jmodal = args.jmodal;
+			var callback = args.callback;
+			var arg = args.arg;
+			var jarticlelist = $(arg); // .articlelist
+			var tidarr = jarticlelist.find('input[name="modtid"]').checked();
+			console.log("获取的数组", tidarr)
+			var jform = $('#mod_delete_form');
+			var jsubmit = $('#delsubmit');
+			var jtotal = jform.find('span.total');
+			jtotal.text(tidarr.length);
+			jsubmit.on('click', function() {
+				jform.reset();
+				jsubmit.button('loading');
+				var fd = new FormData()
+				fd.append("tidarr", tidarr)
+				console.log(fd)
+				$.ajax({
+					url: jform.attr("action"),
+					data: fd,
+					type: "POST",
+					contentType: false,
+					processData: false,
+					success: function(res) {
+						//成功
+						console.log("返回值", res)
+						if (res.code == 200) {
+							$.alert("删除成功")
+							setTimeout(function() {
+								location.reload()
+							}, 200)
+						} else {
+							$.alert(res.message)
+							jsubmit.reset()
+							return
+						}
+					},
+					error: function() {
+						//失败
+					}
+				})
+				return false;
+			});
+		</script>
+	</body>
 </html>
