--- a/views/app/my/my_info.html
+++ b/views/app/my/my_info.html
@@ -1,66 +1,60 @@
 {{ template "layout/header" .}}
-
 <main id="body">
-    <div class="container">
-        <div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
-            <a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-            <a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛回复</a>
-        </div>
-        <div class="row">
-            <!-- 左侧菜单 -->
-            <div class="col-lg-2 hidden-md hidden-sm" id="my_aside">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <img class="avatar-4" src="{{.sessions.Useravatar}}">
-                        <br>{{.sessions.Username}}
-                    </div>
-                    <div class="list-group list-group-flush text-center">
-                        <a href="/my.html" class="list-group-item list-group-item-action active"
-                            data-active="menu-my">个人资料</a>
-                        <a href="/my_article.html" class="list-group-item list-group-item-action"
-                            data-active="menu-my-article">论坛回复</a>
-                    </div>
-                </div>
-            </div>
-            <!-- 右侧内容 -->
-            <div class="col-lg-10" id="my_main">
-                <div class="card">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link  active" href="/my.html" data-active="my_profile">基本资料</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/my_password.html" data-active="my_password">密码</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/my_avatar.html" data-active="my_avatar">头像</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/my_rename.html" data-active="my_rename">更改用户名</a>
-                            </li>
-                            
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="row line-height-4">
-                            <div class="col-md-6">
-                                <span class="text-muted">文章数：</span>{{.userinfo.ArticlesCnt}}<br>
-                                <span class="text-muted">回复数：</span>{{.userinfo.ReplysCnt}}<br>
-                                <span class="text-muted">收藏数：</span><a href="?my-favorites.htm"
-                                    target="_blank">{{.userinfo.ReplysCnt}}</a><br>
-                            </div>
-                            <div class="col-md-6">
-                                <span class="text-muted">用户组：</span>{{.userinfo.Group.Name}} <br>
-                                <span class="text-muted">创建时间：</span>{{.userinfo.CreatedAt.Format "2006-01-02"}}<br>
-                                <span class="text-muted">最后登录：</span>{{.userinfo.LoginDate.Format "2006-01-02"}} <br>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
+			<a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
+			<a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛回复</a>
+		</div>
+		<div class="row">
+			<!-- 左侧菜单 -->
+			<div class="col-lg-2 hidden-md hidden-sm" id="my_aside">
+				<div class="card">
+					<div class="card-body text-center">
+						<img class="avatar-4" src="{{.sessions.Useravatar}}">
+						<br>{{.sessions.Username}}
+					</div>
+					<div class="list-group list-group-flush text-center">
+						<a href="/my.html" class="list-group-item list-group-item-action active" data-active="menu-my">个人资料</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">论坛回复</a>
+					</div>
+				</div>
+			</div>
+			<!-- 右侧内容 -->
+			<div class="col-lg-10" id="my_main">
+				<div class="card">
+					<div class="card-header">
+						<ul class="nav nav-tabs card-header-tabs">
+							<li class="nav-item">
+								<a class="nav-link  active" href="/my.html" data-active="my_profile">基本资料</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/my_password.html" data-active="my_password">密码</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/my_avatar.html" data-active="my_avatar">头像</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/my_rename.html" data-active="my_rename">更改用户名</a>
+							</li>
+						</ul>
+					</div>
+					<div class="card-body">
+						<div class="row line-height-4">
+							<div class="col-md-6">
+								<span class="text-muted">文章数：</span>{{.userinfo.ArticlesCnt}}<br>
+								<span class="text-muted">回复数：</span>{{.userinfo.ReplysCnt}}<br>
+								<span class="text-muted">收藏数：</span><a href="?my-favorites.htm" target="_blank">{{.userinfo.ReplysCnt}}</a><br>
+							</div>
+							<div class="col-md-6">
+								<span class="text-muted">用户组：</span>{{.userinfo.Group.Name}} <br>
+								<span class="text-muted">创建时间：</span>{{.userinfo.CreatedAt.Format "2006-01-02"}}<br>
+								<span class="text-muted">最后登录：</span>{{.userinfo.LoginDate.Format "2006-01-02"}} <br>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </main>
-
 {{ template "layout/footer" .}}
