--- a/views/app/usercenter/u_articles.html
+++ b/views/app/usercenter/u_articles.html
@@ -1,82 +1,80 @@
 {{ template "layout/header" .}}
-    {{/*列表 {{.myarticles}}*/}}
-<main id="body">
-    <main id="body">
-        <div class="container">
-            <!-- 手机导航 / Mobile navigation -->
-            <div class="btn-group mb-3 d-lg-none" role="group" id="user_mobile_nav">
-                <a role="button" class="btn btn-secondary" data-active="menu-user" href="?user-1.htm">个人资料</a>
-                <a role="button" class="btn btn-secondary active" data-active="menu-user-article" href="?user-article-1.htm">论坛回复</a>
-            </div>
-            <div class="row">
-                <!-- PC 导航 / Mobile navigation -->
-                <div class="col-lg-2 hidden-md hidden-sm" id="user_aside">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <img class="avatar-4" src="{{.userinfo.Avatar}}">
-                            <br>{{.userinfo.Username}}
-                        </div>
-                        <div class="list-group list-group-flush text-center" id="user_nav">
-                            <a href="/user/{{.userinfo.ID}}/info.html" class="list-group-item list-group-item-action" data-active="menu-user">个人资料</a>
-                            <a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action active" data-active="menu-user-article">论坛回复</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-10" id="user_main">
-                    <div class="card">
-                        <div class="card-header">
-                            <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="/user/{{.userinfo.ID}}/article.html" data-active="user-article">文章</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/user/{{.userinfo.ID}}/reply.html" data-active="user-reply">回复</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-unstyled articlelist">
-                                {{range .myarticles}}
-                                <li class="media article tap top_3 " data-href="?article-1.htm" data-tid="1">
-                                    {{/*<input type="checkbox" name="modtid" class="mt-3 mr-2" value="1">*/}}
-                                    <a href="?user-1.htm" tabindex="-1" class="ml-1 mt-1 mr-3">
-                                        <img class="avatar-3" src="{{.User.Avatar}}">
-                                    </a>
-                                    <div class="media-body">
-                                        <div class="title break-all">
-                                            <i class="icon-top-3"></i>
-                                            <a href="?article-1.htm"><span class="huux_article_hlight_style1">{{.Article.Title}}</span></a>
-                                        </div>
-                                        <div class="d-flex justify-content-between small mt-1">
-                                            <div>
-                                                <span style="padding-bottom:0;margin-bottom:0;color:; ">
-                                                    <i class="iconfont icon-v1" style="font-size: !important;"></i>
-                                                </span>
-                                                <span class="username text-grey mr-1  hidden-sm" uid="{{.User.ID}}">{{.User.Username}}</span>
-                                                <span class="date text-grey hidden-sm">{{.Article.CreatedAt.Unix | strtime}}</span>
-                                                <span>
-                                                    <span class="text-grey mx-2">←</span>
-                                                    <span class="username text-grey mr-1" uid="2">zhang</span>
-                                                    <span class="text-grey">3天前</span>
-                                                </span>
-                                            </div>
-                                            <div class="text-muted small">
-                                                <span class="ml-2 d-none"><i class="icon-eye"></i> 66</span>
-                                                <span class="ml-2"><i class="icon-comment-o"></i> 6</span>
-                                                <span class="ml-2" title="1 收藏">
-                                                    <i class="icon-star-o" aria-hidden="true"></i>
-                                                    1</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                {{end}}
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+{{/*列表 {{.myarticles}}*/}} <main id="body">
+	<main id="body">
+		<div class="container">
+			<!-- 手机导航 / Mobile navigation -->
+			<div class="btn-group mb-3 d-lg-none" role="group" id="user_mobile_nav">
+				<a role="button" class="btn btn-secondary" data-active="menu-user" href="?user-1.htm">个人资料</a>
+				<a role="button" class="btn btn-secondary active" data-active="menu-user-article" href="?user-article-1.htm">论坛回复</a>
+			</div>
+			<div class="row">
+				<!-- PC 导航 / Mobile navigation -->
+				<div class="col-lg-2 hidden-md hidden-sm" id="user_aside">
+					<div class="card">
+						<div class="card-body text-center">
+							<img class="avatar-4" src="{{.userinfo.Avatar}}">
+							<br>{{.userinfo.Username}}
+						</div>
+						<div class="list-group list-group-flush text-center" id="user_nav">
+							<a href="/user/{{.userinfo.ID}}/info.html" class="list-group-item list-group-item-action" data-active="menu-user">个人资料</a>
+							<a href="/user/{{.userinfo.ID}}/article.html" class="list-group-item list-group-item-action active" data-active="menu-user-article">论坛回复</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-10" id="user_main">
+					<div class="card">
+						<div class="card-header">
+							<ul class="nav nav-tabs card-header-tabs">
+								<li class="nav-item">
+									<a class="nav-link active" href="/user/{{.userinfo.ID}}/article.html" data-active="user-article">文章</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="/user/{{.userinfo.ID}}/reply.html" data-active="user-reply">回复</a>
+								</li>
+							</ul>
+						</div>
+						<div class="card-body">
+							<ul class="list-unstyled articlelist">
+								{{range .myarticles}}
+								<li class="media article tap top_3 " data-href="?article-1.htm" data-tid="1">
+									{{/*<input type="checkbox" name="modtid" class="mt-3 mr-2" value="1">*/}}
+									<a href="?user-1.htm" tabindex="-1" class="ml-1 mt-1 mr-3">
+										<img class="avatar-3" src="{{.User.Avatar}}">
+									</a>
+									<div class="media-body">
+										<div class="title break-all">
+											<i class="icon-top-3"></i>
+											<a href="?article-1.htm"><span class="huux_article_hlight_style1">{{.Article.Title}}</span></a>
+										</div>
+										<div class="d-flex justify-content-between small mt-1">
+											<div>
+												<span style="padding-bottom:0;margin-bottom:0;color:; ">
+													<i class="iconfont icon-v1" style="font-size: !important;"></i>
+												</span>
+												<span class="username text-grey mr-1  hidden-sm" uid="{{.User.ID}}">{{.User.Username}}</span>
+												<span class="date text-grey hidden-sm">{{.Article.CreatedAt.Unix | strtime}}</span>
+												<span>
+													<span class="text-grey mx-2">←</span>
+													<span class="username text-grey mr-1" uid="2">zhang</span>
+													<span class="text-grey">3天前</span>
+												</span>
+											</div>
+											<div class="text-muted small">
+												<span class="ml-2 d-none"><i class="icon-eye"></i> 66</span>
+												<span class="ml-2"><i class="icon-comment-o"></i> 6</span>
+												<span class="ml-2" title="1 收藏">
+													<i class="icon-star-o" aria-hidden="true"></i> 1</span>
+											</div>
+										</div>
+									</div>
+								</li>
+								{{end}}
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </main>
 {{ template "layout/footer" .}}
