--- a/views/app/index/index.html
+++ b/views/app/index/index.html
@@ -87,8 +87,8 @@
 						<div class="row">
 							{{range .newestuser}}
 							<div class="col-3 mb-1 text-center">
-								<a class="small text-muted text-nowrap" href="/user/{{.ID}}/info.html" data-toggle="tooltip" title="zhang"
-								 data-original-title="zhang">
+								<a class="small text-muted text-nowrap" href="{{if eq .ID $sesid}} /my.html {{else}}/user/{{.ID}}/info.html{{end}}" data-toggle="tooltip" title="myzone"
+								 data-original-title="myzone">
 									<img src="{{.Avatar}}" alt="{{.Username}}" width="28" height="28" class="img-circle"><br>{{.Username}} </a>
 							</div>
 							{{end}}
