--- a/views/app/layout/header.inc.html
+++ b/views/app/layout/header.inc.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-transform">
 		<meta http-equiv="Cache-Control" content="no-siteapp">
-		<title>{{.webname}}-</title>
+		<title>{{.webname}}</title>
 		<link rel="shortcut icon" href="/static/img/web.ico">
 		<link rel="icon" sizes="32x32" href="/static/img/web.ico">
 		<link rel="Bookmark" href="/static/img/favicon.ico">
