--- a/views/app/mod/del_mod.html
+++ b/views/app/mod/del_mod.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name=".port" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Gin BBS 站点介绍">
+		<meta name="description" content="des">
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-transform">
@@ -23,9 +23,6 @@
 		<script src="/static/js//bbs.js?1.0"></script>
 		<script src="/static/lang/zh-cn/bbs.js?1.0"></script>
 		<style>
-			/*
-box-shadow: 0 0 5px red;
-*/
         @keyframes xndigest {
             0% { color: red; text-shadow: 0 0 3px #FF8D8D;}
             20% { color: orange; text-shadow: 0 0 3px #FFE1AD;}
@@ -34,19 +31,14 @@ box-shadow: 0 0 5px red;
             80% { color: purple; text-shadow: 0 0 3px #FFC9F3;}
             100% { color: red; text-shadow: 0 0 3px #FF8D8D;}
         }
-
-        /*水晶闪烁效果 占内存*/
-        i.icon-diamond.flash{color: #D53D38;  /*animation: xndigest 5s linear infinite;*/ }
-
+        i.icon-diamond.flash{color: #D53D38;  }
         i.icon-digest-1 {  text-shadow: 0 0 3px #AFE4FF; }
         i.icon-digest-2 {  text-shadow: 0 0 3px #FFF177; }
         i.icon-digest-3 {  text-shadow: 0 0 3px #FF8D8D; }
-        .icon-digest-1:before { content: "\f219";  color: #5BC0DE;} /* "\f0a5" */
+        .icon-digest-1:before { content: "\f219";  color: #5BC0DE;}
         .icon-digest-2:before { content: "\f219";  color: #ECA541;}
         .icon-digest-3:before { content: "\f219"; color: #D53D38;}
         .icon-digest-3:afteer { content: "精"; color: #D53D38;}
-
-
     </style>
 	</head>
 	<body>
