--- a/views/app/reply/advance_reply.html
+++ b/views/app/reply/advance_reply.html
@@ -1,5 +1,5 @@
 {{ template "layout/header" .}}
-{{/*<script src="//cdn.ckeditor.com/4.12.1/full/ckeditor.js"></script>*/}}
+
 <script src="/static/ckeditor/ckeditor.js"></script>
 <main id="body">
 	<div class="container">
@@ -33,7 +33,7 @@
 					</div>
 				</div>
 			</div>
-			<a role="button" class="btn btn-secondary btn-block xn-back col-lg-6 mx-auto mb-3" href="javascript:history.back();">返回</a>
+			
 		</div>
 	</div>
 </main>
@@ -41,8 +41,7 @@
 	CKEDITOR.replace('message', {
 		language: 'zh-cn',
 		disallowedContent: '<script >',
-		// toolbar: [['Smiley']],
-		// toolbarCanCollapse: true,
+		
 		toolbarStartupExpanded: false,
 		toolbar: [{
 			name: 'document',
@@ -79,10 +78,9 @@
 		removeDialogTabs: 'image:advanced;image:Link',
 		filebrowserImageUploadUrl: "/api/image/upload",
 		filebrowserUploadUrl: "/api/image/upload",
-		//enterMode:CKEDITOR.ENTER_BR, //屏蔽换行符<br>
-		//shiftEnterMode:CKEDITOR.ENTER_P, //屏蔽段落<p>
+		
 		extraPlugins: 'uploadimage',
-		// extraPlugins:['codesnippet','uploadimage'],
+		
 		codeSnippet_theme: 'zenburn'
 	});
 	var qrform = $("#advance_reply_form")
@@ -109,7 +107,7 @@
 		}
 		// return
 		if (CKEDITOR.instances.editor1.getData().length == 0) {
-			$.alert("亲，写点什么再提交吧 ^_^")
+			$.alert("写点什么再提交吧 ^_^")
 			return;
 		}
 		qrform.reset();
@@ -123,9 +121,9 @@
 			if (code == 200) {
 				$.alert("回复成功")
 				setTimeout(function() {
-					// addNewReplyElement()
+					
 					history.back()
-				}, 2000)
+				}, 1000)
 			} else if (code < 0) {
 				$.alert(message);
 				jsubmit.button('reset');
@@ -159,7 +157,7 @@
 		attachfile = attachUploader[0].files[0]
 		console.log(attachfile)
 		var filesSize = attachfile.size
-		// 禁止上传大于1m的文件
+		
 		console.log(attachfile.size)
 		if (filesSize > maxSize) {
 			$.alert("文件大于1M，不能上传")
@@ -182,13 +180,13 @@
 						jattachparent.append(
 							'<fieldset class="fieldset"><legend>上传的附件</legend><ul class="attachlist"><ul></fieldset>');
 					}
-					// 添加福建区域
+					
 					message = res.data
 					addAttachLi(message.url, message.filetype, 1, message.orgfilename)
 					$.alert("上传成功")
-					/*setTimeout(function(){
+					setTimeout(function(){
 					    location.reload()
-					}, 5000)*/
+					}, 1000)
 				} else {
 					$.alert(res.message)
 					return
