--- a/views/app/my/my_article.html
+++ b/views/app/my/my_article.html
@@ -1,10 +1,6 @@
 {{ template "layout/header" .}}
 <main id="body">
 	<div class="container">
-		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
-			<a role="button" class="btn btn-secondary" data-active="menu-my" href="/my.html">个人资料</a>
-			<a role="button" class="btn btn-secondary active" data-active="menu-my-article" href="/my_article.html">论坛回复</a>
-		</div>
 		<div class="row">
 			<!-- 左侧菜单 -->
 			<div class="col-lg-2 hidden-md hidden-sm" id="my_aside">
@@ -15,7 +11,7 @@
 					</div>
 					<div class="list-group list-group-flush text-center">
 						<a href="/my.html" class="list-group-item list-group-item-action" data-active="menu-my">个人资料</a>
-						<a href="/my_article.html" class="list-group-item list-group-item-action active" data-active="menu-my-article">论坛回复</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action active" data-active="menu-my-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -39,7 +35,6 @@
 						<ul class="list-unstyled articlelist mb-0">
 							{{range .myarticles}}
 							<li class="media article tap  " data-href="?article-2.htm" data-tid="2">
-								<input type="checkbox" name="modtid" class="mt-3 mr-2" value="2">
 								<a href="?user-2.htm" tabindex="-1" class="ml-1 mt-1 mr-3">
 									<img class="avatar-3" src="{{.User.Avatar}}">
 								</a>
@@ -56,10 +51,10 @@
 											<span class="date text-grey">{{.Article.CreatedAt.Unix | strtime}}</span>
 										</div>
 										<div class="text-muted small">
-											<span class="ml-2 d-none"><i class="icon-eye"></i> 0</span>
-											<span class="ml-2"><i class="icon-comment-o"></i> 0</span>
+											<span class="ml-2"><i class="icon-eye"></i>{{.Article.ViewsCnt}}</span>
+											<span class="ml-2"><i class="icon-comment-o"></i>{{.Article.ReplysCnt}}</span>
 											<span class="ml-2" title="0 收藏">
-												<i class="icon-star-o" aria-hidden="true"></i> 0</span>
+												<i class="icon-star-o" aria-hidden="true"></i>{{.Article.FavouriteCnt}}</span>
 										</div>
 									</div>
 								</div>
