--- a/views/app/my/my_avatar.html
+++ b/views/app/my/my_avatar.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
 			<a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-			<a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">论坛回复</a>
+			<a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my.html?action=5">文章回复</a>
 		</div>
 		<div class="row">
 			<!-- 左侧菜单 -->
@@ -11,10 +11,10 @@
 				<div class="card">
 					<div class="card-body text-center">
 						<img class="avatar-4" src="{{.sessions.Useravatar}}">
-						<br>zhang </div>
+						<br>{{.sessions.Username}} </div>
 					<div class="list-group list-group-flush text-center">
 						<a href="/my.html" class="list-group-item list-group-item-action active" data-active="menu-my">个人资料</a>
-						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">论坛回复</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 					$.alert("修改成功")
 					setTimeout(function() {
 						location.reload()
-					}, 5000)
+					}, 1000)
 				} else {
 					$.alert(res.message)
 					return
