--- a/views/app/my/my_name.html
+++ b/views/app/my/my_name.html
@@ -1,10 +1,7 @@
 {{ template "layout/header" .}}
 <main id="body">
 	<div class="container">
-		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
-			<a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-			<a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my_article.html">论坛回复</a>
-		</div>
+		
 		<div class="row">
 			<!-- 左侧菜单 -->
 			<div class="col-lg-2 hidden-md hidden-sm" id="my_aside">
@@ -15,7 +12,7 @@
 					</div>
 					<div class="list-group list-group-flush text-center">
 						<a href="/my.html" class="list-group-item list-group-item-action active" data-active="menu-my">个人资料</a>
-						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">论坛回复</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -76,15 +73,12 @@
 				"username": jnewname.val()
 			},
 			type: "GET",
-			/*    contentType: false,
-			    processData:false,*/
 			success: function(res) {
 				//成功
 				console.log(res.data.is_used)
 				used = res.data.is_used
 				if (used == 1) {
 					console.log("使用了")
-					// jform.find('[name="new_username"]').focus().alert("用户名已经使用了");
 					alert("用户名已经用了")
 					jsubmit.button('reset');
 					jsubmit.attr("disabled", true)
@@ -104,7 +98,7 @@
 				$.alert("修改成功")
 				setTimeout(function() {
 					location.reload()
-				}, 2000)
+				}, 1000)
 			}
 		});
 		return false;
