--- a/views/app/my/my_password.html
+++ b/views/app/my/my_password.html
@@ -1,20 +1,16 @@
 {{ template "layout/header" .}}
 <main id="body">
-	<div class="container">
-		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
-			<a role="button" class="btn btn-secondary active" data-active="menu-my" href="/my.html">个人资料</a>
-			<a role="button" class="btn btn-secondary" data-active="menu-my-article" href="/my_article.html">论坛回复</a>
-		</div>
+	<div class="container">		
 		<div class="row">
 			<!-- 左侧菜单 -->
 			<div class="col-lg-2 hidden-md hidden-sm" id="my_aside">
 				<div class="card">
 					<div class="card-body text-center">
 						<img class="avatar-4" src="{{.sessions.Useravatar}}">
-						<br>zhang </div>
+						<br>{{.sessions.Username}} </div>
 					<div class="list-group list-group-flush text-center">
 						<a href="/my.html" class="list-group-item list-group-item-action active" data-active="menu-my">个人资料</a>
-						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">论坛回复</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action" data-active="menu-my-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -97,12 +93,10 @@
 			if (code == 200) {
 				$.alert("修改成功")
 				setTimeout(function() {
-					// addNewReplyElement()
 					location.reload()
-				}, 2000)
+				}, 1000)
 			} else {
 				$.alert("修改失败")
-				// jform.find('[name="'+code+'"]').alert(message).focus();
 				jsubmit.button('reset');
 			}
 		});
