--- a/views/app/my/my_reply.html
+++ b/views/app/my/my_reply.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="btn-group mb-3 d-lg-none" role="group" id="my_mobile_nav">
 			<a role="button" class="btn btn-secondary" data-active="menu-my" href="/my.html">个人资料</a>
-			<a role="button" class="btn btn-secondary active" data-active="menu-my-article" href="/my_article.html">论坛回复</a>
+			<a role="button" class="btn btn-secondary active" data-active="menu-my-article" href="/my_article.html">文章回复</a>
 		</div>
 		<div class="row">
 			<!-- 左侧菜单 -->
@@ -15,7 +15,7 @@
 					</div>
 					<div class="list-group list-group-flush text-center">
 						<a href="/my.html" class="list-group-item list-group-item-action" data-active="menu-my">个人资料</a>
-						<a href="/my_article.html" class="list-group-item list-group-item-action active" data-active="menu-my-article">论坛回复</a>
+						<a href="/my_article.html" class="list-group-item list-group-item-action active" data-active="menu-my-article">文章回复</a>
 					</div>
 				</div>
 			</div>
@@ -60,10 +60,6 @@
 													color: var(--secondary) !important;
 												}
 											</style>
-											<a href="?reply-update-8.htm" class="text-grey reply_update mr-3"><i class="icon-edit" title="编辑"></i> <span
-												 class="d-none">编辑</span></a>
-											<a data-href="?reply-delete-8.htm" data-confirm-text="确定删除吗？" href="javascript:void(0);" class="text-grey reply_delete _confirm mr-3"><i
-												 class="icon-remove" title="删除"></i> <span class="d-none">删除</span></a>
 										</div>
 									</div>
 									<div class="message mt-1 break-all">
