--- a/views/app/saying/saying.html
+++ b/views/app/saying/saying.html
@@ -7,9 +7,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-9 main">
-				<ol class="breadcrumb d-none d-md-flex">
-					<li class="breadcrumb-item"><a href="/" aria-label="首页"><i class="icon-home"></i></a></li>
-				</ol>
 				<div class="card card-saying">
 					<div class="card-body">
 						<div class="media">
@@ -30,15 +27,13 @@
 											{{.saying.ViewsCnt}}
 										</span>
 									</div>
-									{{/*如果是作者本人操作*/}}
-									{{/*{{if islogin}}*/}} {{if eq .fcomment.UserID .sessions.Userid}}
+									{{if eq .fcomment.UserID .sessions.Userid}}
 									<div>
 										<a href="/saying/{{.saying.ID}}/edit.html" class="text-grey mr-2 comment_update"><i class="icon-edit"></i> 编辑</a>
 										<a data-href="/saying/{{.saying.ID}}/delete.html" href="javascript:void(0);" class="text-grey comment_delete"
 										 isfirst="1"><i class="icon-remove"></i> 删除</a>
 									</div>
 									{{end}}
-									{{/*{{end}}*/}}
 								</div>
 							</div>
 						</div>
@@ -70,7 +65,7 @@
 						<div class="card-title">
 							<div class="d-flex justify-content-between">
 								<div>
-									<b>最新回复</b> (<span class="comments">{{.comment_list_len}}</span>) </div>
+									<b>最新评论</b> (<span class="comments">{{.comment_list_len}}</span>) </div>
 								<div>
 								</div>
 							</div>
@@ -121,7 +116,7 @@
 											<div>{{.sessions.Username}}</div>
 										</div>
 										<div>
-											<span class="floor" id="newfloor">回复</span>上楼 </div>
+											<span class="floor" id="newfloor">评论</span>上楼 </div>
 									</div>
 									<div>
 										<form action="/api/saying/{{.saying.ID}}/comment" method="post" id="quick_reply_form" class="d-block">
@@ -130,16 +125,14 @@
 											<div class="message mt-1">
 												<textarea class="form-control" id="editor1" placeholder="内容" name="message"></textarea>
 											</div>
-											{{/*<br>*/}}
-											{{ template "layout/captcha" .}}
 											<div class="text-muted mt-2 small">
 												<div class="d-flex justify-content-between">
 													<div>
 														<button id="commentsubmit" type="button" class="btn btn-sm btn-secondary" id="submit" data-loading-text="正在提交...">
-															回复 </button>
+															评论 </button>
 													</div>
 													<div>
-														<a class="icon-mail-forward text-muted" href="#" id="advanced_reply"> 高级回复</a>
+														<a class="icon-mail-forward text-muted" href="#" id="advanced_reply"> 高级评论</a>
 													</div>
 												</div>
 											</div>
@@ -149,7 +142,7 @@
 							</li>
 							{{else}}
 								<li class="comment newcomment media">
-									<a role="button" class="btn btn-default btn-block xn-back col-lg-6 mx-auto mb-3" target="_blank" href="/login.html">登录可回复</a>
+									<a role="button" class="btn btn-default btn-block xn-back col-lg-6 mx-auto mb-3" target="_blank" href="/login.html">登录可评论</a>
 								</li>
 								{{end}}
 						</ul>
@@ -158,12 +151,10 @@
 				<div class="d-none sayinglist"><input type="checkbox" name="modtid" value="2" checked=""></div>
 				{{if .islogin}}
 				{{ template "mod/saying_list_mod.inc" .}}
-				{{end}}
-				<a role="button" class="btn btn-secondary btn-block xn-back col-lg-6 mx-auto mb-3" href="javascript:history.back();">返回</a>
+				{{end}}				
 			</div>
 			<div class="col-lg-3 d-none d-lg-block aside">
 				{{ template "layout/addnewarticle" .}}
-				{{/*用户信息*/}}
 				<div class="card card-user-info">
 					<div class="m-3 text-center">
 						<a href="?user-1.htm" tabindex="-1">
@@ -209,23 +200,9 @@
 	var jsubmit = $('#commentsubmit');
 	jsubmit.on('click', function() {
 		if (CKEDITOR.instances.editor1.getData().length == 0) {
-			$.alert("亲，写点什么再提交吧 ^_^")
+			$.alert("写点什么再提交吧 ^_^")
 			return;
-		}
-		// 验证验证码
-		var captcha = getCaptcha()
-		var captchaKey = getCaptchaKey()
-		captchaPass = virefyCaptcha(captcha, captchaKey)
-		if (captcha.length == 0) {
-			$.alert("验证码不能为空")
-			return
-		} else {
-			if (captchaPass != 200) {
-				$.alert("验证码错误")
-				refreshCaptcha();
-				return
-			}
-		}
+		}		
 		qrform.reset();
 		jsubmit.button('loading');
 		var replydata = qrform.serializeObject();
@@ -234,11 +211,11 @@
 		$.xpost(qrform.attr('action'), replydata, function(code, message) {
 			console.log(code, ":", message)
 			if (code == 200) {
-				$.alert("回复成功")
+				$.alert("评论成功")
 				setTimeout(function() {
 					// addNewCommentElement()
 					location.reload()
-				}, 2000)
+				}, 1000)
 			} else if (code < 0) {
 				$.alert(message);
 				jsubmit.button('reset');
@@ -258,7 +235,7 @@
 			'<div class="d-flex justify-content-between small text-muted">' + '           <div> ' +
 			'<span style="padding-bottom:0;margin-bottom:0;color:; ">' +
 			'<i class="iconfont icon-v1" style="font-size: !important;">管理员 </i> ' + '</span>' + '<span class="username">' +
-			'<a href="?user-2.htm" class="text-muted font-weight-bold">zhang</a>' + '</span>' +
+			'<a href="?user-2.htm" class="text-muted font-weight-bold">{{.sessions.username}}</a>' + '</span>' +
 			'<span class="date text-grey ml-2">2小时前</span>' + '</div> ' + '<div class="text-right text-grey"> ' +
 			'<style>.haya-comment-like .haya-comment-like-loved {color: var(--secondary) !important;}</style> ' +
 			'<a href="javascript:void(0)" data-tid="1" data-pid="5" class="text-grey comment_reply mr-3">' +
@@ -275,7 +252,7 @@
 		// 楼层 +1
 		var jfloor = $('#newfloor');
 		jfloor.html(xn.intval(jfloor.html()) + 1);
-		// 回复数 +1
+		// 评论数 +1
 		var jcomments = $('.comments');
 		jcomments.html(xn.intval(jcomments.html()) + 1);
 	}
